Fix alignment in blocks modules

--- a/src/components/color-blocks.module.css
+++ b/src/components/color-blocks.module.css
@@ -11,6 +11,7 @@
   flex-grow: 0;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   margin-right: 0.25rem;
   margin-left: 0.25rem;
   margin-bottom: 1rem;
@@ -26,6 +27,13 @@
   background-color: #f5f5f5;
 }
 
+.color-swatch-and-title {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+}
+
 .color-title {
   margin-top: 1rem;
   flex: 1;
@@ -34,7 +42,6 @@
 .color-credit {
   flex: 1;
   font-size: 60%;
-  margin-bottom: 0;
 }
 
 .color-swatch {
@@ -63,8 +70,8 @@ div.color-blocks > :last-child {
   }
 
   .color-block {
-    flex-basis: calc(50% - 1rem);
-    margin: auto;
+    flex-basis: calc(50% - 0.5rem);
     margin-bottom: 1rem;
+    padding: 0.25rem;
   }
 }
