--- a/src/components/color-swatch.module.css
+++ b/src/components/color-swatch.module.css
@@ -1,6 +1,5 @@
 .swatch-container {
   width: 100%;
-  margin-bottom: 1rem;
 }
 
 .swatch {
